Address recent FAWE deprecations (#399)
Signed-off-by: Alexander Brandes <mc.cache@web.de>